making things functional

--- a/templates/pages/signup_login pages/reset_password_email_page.html
+++ b/templates/pages/signup_login pages/reset_password_email_page.html
@@ -63,11 +63,14 @@
                 LOGO
             </div>
 
-            <h1 class="fw-bold text-primary mt-4">Reset Password</h1>
+            <h1 class="fw-bold text-primary mt-4">Send Reset Password Email</h1>
 
             <!-- SIGN UP FORM -->
             <div class="mt-5">
                 <form>
+                    <div class="text-muted p-auto m-auto text text-center mb-3">
+                        An email with a reset code will be sent to your email address.
+                    </div>
                     <div class="form-floating text-light">
                         <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="email" name="email" placeholder=" ">
                         <label for="email"><i class="fa-solid fa-envelope fa-sm"></i> Email</label>
@@ -77,6 +80,9 @@
 						<span class="input-group-text"><i class="fas fa-key"></i></span>
 						<input type="password" class="form-control" v-model="password" name="password" placeholder="Password">
 					</div> -->
+                    <div class="text-muted p-auto m-auto text text-center mb-3" id="sent_status" style="display:none;">
+                        Email successfully sent to {{ email }}
+                    </div>
                     <div class="d-grid">
                         <button type="button" @click="send_reset_email()" class="btn btn-main mb-4">Send Reset Password Email</button>
                     </div>
