--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -68,17 +68,30 @@
             <!-- SIGN UP FORM -->
             <div class="mt-5">
                 <form>
+                    <div class="text-muted p-auto m-auto text text-center mb-3">
+                        Enter the code sent to your email along with your new password.
+                    </div>
                     <div class="form-floating text-light">
-                        <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="email" name="email" placeholder=" ">
-                        <label for="email"><i class="fa-solid fa-envelope fa-sm"></i> Email</label>
+                        <input type="text" class="form-control blurred-minor-gradient-login text-light" v-model="reset_code" name="reset_code" placeholder=" ">
+                        <label for="reset_code"><i class="fa-solid fa-user-secret fa-sm"></i> Reset Code</label>
                     </div>
 					<br>
-					<!-- <div class="input-group form-group">
-						<span class="input-group-text"><i class="fas fa-key"></i></span>
-						<input type="password" class="form-control" v-model="password" name="password" placeholder="Password">
-					</div> -->
+                    <div class="form-floating text-light">
+                        <input type="password" class="form-control blurred-minor-gradient-login text-light" v-model="new_password_1" name="new_password_1" placeholder=" ">
+                        <label for="new_password_1"><i class="fa-solid fa-key fa-sm"></i> New Password</label>
+                    </div>
+                    <br>
+                    <div class="form-floating text-light">
+                        <input type="password" class="form-control blurred-minor-gradient-login text-light" v-model="new_password_2" name="new_password_2" placeholder=" ">
+                        <label for="new_password_2"><i class="fa-solid fa-key fa-sm"></i> Confirm New Password</label>
+                    </div>
+                    <br>
+                    <div class="text-danger" id="reset_status">
+                        
+                    </div>
+                    <br>
                     <div class="d-grid">
-                        <button type="button" @click="send_reset_email()" class="btn btn-main mb-4">Send Reset Password Email</button>
+                        <button type="button" @click="reset_password()" class="btn btn-main mb-4">Reset Password</button>
                     </div>
                 </form>
             </div>
