reset password works

--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -86,7 +86,7 @@
                         <label for="new_password_2"><i class="fa-solid fa-key fa-sm"></i> Confirm New Password</label>
                     </div>
                     <br>
-                    <div class="text-danger" id="reset_status">
+                    <div class="text-muted p-auto m-auto text text-center mb-3" id="reset_status">
                         
                     </div>
                     <br>
