--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -99,7 +99,7 @@
                         Don't have an account?&nbsp<a href="signup_page.html">Sign Up</a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="#" class="mt-2">Forgot your password?</a>
+                        <a href="reset_password_email_page.html" class="mt-2">Forgot your password?</a>
                     </div>
                 </div>
             </div>
