reset password now works

--- a/templates/pages/signup_login pages/reset_password_email_page.html
+++ b/templates/pages/signup_login pages/reset_password_email_page.html
@@ -69,7 +69,7 @@
             <div class="mt-5">
                 <form>
                     <div class="text-muted p-auto m-auto text text-center mb-3">
-                        An email with a reset code will be sent to your email address.
+                        An email with instructions will be sent to your email address.
                     </div>
                     <div class="form-floating text-light">
                         <input type="email" class="form-control blurred-minor-gradient-login text-light" v-model="email" name="email" placeholder=" ">
