--- a/templates/pages/version1-home,create-pages/trips-homepage.html
+++ b/templates/pages/version1-home,create-pages/trips-homepage.html
@@ -70,5 +70,9 @@
 
     <!-- Refer to my own external JS -->
     <script src="homepageNavBar.js"></script>
+
+    <script>
+      localStorage.getItem("user")
+    </script>
 </body>
 </html>
