Refined login, sign up and reset password page designs

--- a/templates/pages/signup_login pages/reset_password_email_page.html
+++ b/templates/pages/signup_login pages/reset_password_email_page.html
@@ -34,7 +34,7 @@
 <div class="container-fluid">
     <div class="row vh-100 position-relative">
         <!-- RIGHT COLUMN (IMG) -->
-        <div class="col-lg-12 p-0 position-absolute" style="z-index: -1;">
+        <div class="col-12 p-0 position-absolute" style="z-index: -1;">
             <div id="carouselExampleInterval" class="carousel slide carousel-fade d-flex justify-content-center align-items-center vh-100" data-bs-ride="carousel">
                 <div class="carousel-inner login-page-carousel-img">
                     <div class="carousel-item active" data-bs-interval="5000">
@@ -57,7 +57,7 @@
         </div>            
         
         <!-- LEFT COLUMN (WHITE) -->
-        <div class="col-lg-5 col-md-6 col-12 px-4 blurred-minor-2">
+        <div class="col-sm-8 col-md-6 col-lg-5 px-4 blurred-minor-2" style="overflow-y: scroll; height: 100%;">
             <!-- LOGO GOES HERE -->
             <div class="mt-3">
                 LOGO
