--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -21,6 +21,11 @@
     <title>Login Page</title>
 
     <style>
+        /* body{
+            background-image: url("../../../images/home_page/main_images/main_page_bg_2.jpg");
+            background-size: cover;
+        } */
+
         #firebaseui-auth-container {
             position:absolute;
             top:70%
@@ -34,7 +39,7 @@
     <div class="container-fluid">
         <div class="row vh-100 position-relative">
             <!-- RIGHT COLUMN (IMG) -->
-            <div class="col-lg-12 d-none d-lg-block p-0 position-absolute" style="z-index: -1;">
+            <div class="col-12 p-0 position-absolute" style="z-index: -1;">
                 <div id="carouselExampleInterval" class="carousel slide carousel-fade d-flex justify-content-center align-items-center vh-100" data-bs-ride="carousel">
                     <div class="carousel-inner login-page-carousel-img">
                         <div class="carousel-item active" data-bs-interval="5000">
@@ -54,10 +59,10 @@
                         </div>
                     </div>
                 </div>
-            </div>            
+            </div>
             
             <!-- LEFT COLUMN (WHITE) -->
-            <div class="col-lg-5 px-4 blurred-minor-2">
+            <div class="col-sm-8 col-md-6 col-lg-5 px-4 blurred-minor-2" style="overflow-y: scroll; height: 100%;">
                 <!-- LOGO GOES HERE -->
                 <div class="mt-3">
                     LOGO
