--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -21,7 +21,7 @@
 
 </head>
 <body class="bg-dark">
-    <div id="nav" class="row sticky-top">
+    <div id="nav" class="row sticky-top m-0">
         <createtrip-navbar></createtrip-navbar>
     </div>
 
@@ -29,7 +29,7 @@
         <img src="../../images/home_page/main_images/main_page_bg_1.jpg" class="create-trip-main-img position-fixed">
     </div>
 
-        <!-- new trip form -->
+    <!-- new trip form -->
     <div id="create_get_trip">
         <div class="container-md text-light py-3 position-relative">
             <form action="#">
@@ -77,7 +77,7 @@
                     <div>
                         <button type="button" class="btn blurred-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-solid fa-user-group fa-xs"></i>+ Add Collaborators</button>
                         
-                        <p class="text-muted">{{friendCollaborators}}</p>
+                        <p class="text-light mt-2">{{friendCollaborators}}</p>
                         <!-- Modal -->
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="height: 500px;">
                             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
@@ -137,9 +137,6 @@
                                                     <label class="form-check-label" for="thirdCheckbox">Wei Xuan</label>
                                                 </li>
                                             </ul>
-
-                                              
-                                           
                                           </div>
                                         </div>
                                     </div>
