--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -39,6 +39,15 @@
                         <h1> Trip to Seoul, Korea </h1>
                         <h5 style="font-style:italic;"> 1 December 2022 - 10 December 2022</h5>
                         <p>Trip leader, please select the activities </p>
+                        <!-- Filter Tag -->
+                        <p>Filter by:
+                        <select v-model="filter_tag" @change="sort_by">
+                            <option>Tag</option>
+                            <option>Votes</option>
+                            <option>Cost</option>
+                        </select>
+                        {{filter_tag}}
+                        </p>
                     
 
                         <!-- Table  -->
@@ -52,6 +61,7 @@
                                             <th scope="col">
                                                 <label class="">
                                                 <input type="checkbox" @change="select_all()"/>
+                                                <!-- @change="select_all()" -->
                                                 <div class=""></div>
                                                 </label>
                                             </th>
@@ -64,10 +74,11 @@
                                     </thead>
                                         <!-- TABLE BODY -->
                                     <tbody>
-                                        <template v-for="location in locations">
+                                        <template v-for="(location,index) in locations">
                                             <tr scope="row">
                                                 <th scope="row">
-                                                <input type="checkbox" name="atv" :value="location.price.sgd" v-model="total_price_list" @change="calculate_spending()" />
+                                                <input type="checkbox" name="atv" :value=index v-model="selected_activities" @change="calculate_spending()"/>
+                                                <!-- @change="calculate_spending()"  -->
                                                 </th>
                                                 <td>
                                                     {{ location.name }}
@@ -76,7 +87,7 @@
                                                     {{ location.tag }}
                                                 </td>
                                                 <td style="text-align: center;">
-                                                    {{ location.votes_percentage.yes }}%
+                                                    {{ calculate_votes_percentage(location) }}%
                                                 </td>
                                                 <td style="text-align: center;">
                                                     ${{ location.price.sgd }}
@@ -85,22 +96,23 @@
 
                                                     <!-- SPACE -->
                                                     <tr class="spacer"><td colspan="100"></td></tr>
-                                                </template>
+                                        </template>
 
                                         </tbody>
                                         </table>
-                                    </div>
+                                </div>
 
 
 
 
                             </div>
+                            <!-- {{ selected_activities }} -->
                         </div>
 
                     </div>
                 </div>
                 
-                <footer class="bg-mild d-flex justify-content-between sticky-bottom py-3" >
+                <footer class="bg-mild d-flex justify-content-between sticky-bottom py-3 " >
 
                         <h3>Total Spending: {{ spending }} SGD</h3>
  
