COLLABORATORS ARE NOW DYNAMIC

--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -62,7 +62,7 @@
             
                             <!-- 2. Arrival country -->
                             <div class="col-md-5 mb-3 col-6">
-                                <div class="form-floating mb-3">
+                                <div class="form-floating">
                                     <input type="text" class="form-control" name="flight_arrival_country" placeholder=" " list="list_all_countries" v-model="arrive_country" datetime_obj="arrive-country-flight" @change="update_datetimes($event)" id="flight_arrival_country">
                                     <label for="flight_arrival_country"><i class="fa-solid fa-plane-arrival"></i> Arrival Country</label>
                                 </div>
